added model to CourseController

--- a/WestcoastEdu.Console/WestcoastEdu.Console.csproj
+++ b/WestcoastEdu.Console/WestcoastEdu.Console.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\WestCoastEdu.BCL\WestCoastEdu.BCL.csproj" />
+    <ProjectReference Include="..\WestcoastEdu.BCL\WestcoastEdu.BCL.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
