--- a/WestcoastEdu.Web/appsettings.Development.json
+++ b/WestcoastEdu.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "sqlite": "Data Source=westcoastedu.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
