--- a/WestCoastEdu.Api/appsettings.Development.json
+++ b/WestCoastEdu.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "sqlite": "Data Source=westcoastedu.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
